log_filter 7.x-1.x, 2013-09-01
------------------------------
* Increase log_filter's module weight to 10; the module's hook_menu() must be invoked _after_ dblog's ditto.
* Do only add dblog's viewer as menu tab if that module is enabled.

log_filter 7.x-1.1, 2013-07-21
--------------------------------------------------
* Released.

log_filter 7.x-1.x, 2013-07-21
------------------------------
* Now uses Judy.ajaxcomplete instead of own custom ditto.
* Fixed username autocomplete result ordering.

log_filter 7.x-1.x, 2013-07-20
------------------------------
* Removed small viewport (<1136 px wide) css support.
* Removed AJAX callback form_token check, because provides little additional security, and is no good for GET requests.
* Implemented searching by user name.

log_filter 7.x-1.0, 2013-07-04
--------------------------------------------------
* Released.

log_filter 7.x-1.x, 2013-07-04
------------------------------
* Frontend now checks that the Judy library exists and has version 2.0+.

log_filter 7.x-1.x, 2013-06-29
------------------------------
* Prevent deletion of events that log log deletion.
* Fixed defaults of settings variables.
* Moved filter delete button to prevent mix-up with delete logs button.
* Added overlay when user goes from one filter to another.
* Increased max allowed value of time_range to 9999 (from 1000).
* Removed menu option; Log Filter now always takes over dblog's menu item, and adds dblog's view as a tab instead.
* Install now inserts some default filters.

log_filter 7.x-1.x, 2013-06-28
------------------------------
* Don't show filter by event message when validation fails.

log_filter 7.x-1.x, 2013-06-27
------------------------------
* Time date is allowed to be the same for From as well as To, regardless of the time values.
* Implemented set filter condition by event column feature.

log_filter 7.x-1.x, 2013-06-25
------------------------------
* Added support for Inspect output folding/formatting.
