@@ -1,3 +1,7 @@
+log_filter 7.x-1.x, 2014-04-24
+------------------------------
+* Fixed that sites using jQuery >v1.4.4 continually get 'form outdated' in the log viewer, due to AJAX http status 403 errors (issue 2073905).
+
 log_filter 7.x-1.x, 2013-09-01
 ------------------------------
 * Increase log_filter's module weight to 10; the module's hook_menu() must be invoked _after_ dblog's ditto.
